--- a/SpringRESTWithAuthPrototype01/pom.xml
+++ b/SpringRESTWithAuthPrototype01/pom.xml
@@ -15,6 +15,7 @@
 		<springframework.version>4.2.0.RELEASE</springframework.version>
 		<springsecurity.version>4.1.1.RELEASE</springsecurity.version>
 		<jackson.version>2.8.11.1</jackson.version>
+		<jackson.version>[2.8.11,)</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
