--- a/SpringRESTWithAuthPrototype01/pom.xml
+++ b/SpringRESTWithAuthPrototype01/pom.xml
@@ -12,9 +12,8 @@
 	<description>Spring REST With Auth Prototype 01</description>
 	
   	<properties>
-		<springframework.version>4.2.0.RELEASE</springframework.version>
+		<springframework.version>[4.3.17,)</springframework.version>
 		<springsecurity.version>4.1.1.RELEASE</springsecurity.version>
-		<jackson.version>2.8.11.1</jackson.version>
 		<jackson.version>[2.8.11,)</jackson.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
